# Agentic-Social-Profiling

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
agentic_social_profiling/: README.md  pyproject.toml
agentic_social_profiling/src/agentic_social_profiling/: crew.py  main.py
agentic_social_profiling/src/agentic_social_profiling/config/: agents.yaml  target_users.yaml  tasks.yaml
agentic_social_profiling/src/agentic_social_profiling/config/agents/: developers.yaml  hr_profiler.yaml  marketing.yaml  sales.yaml
config/: agents.yaml  characters.json  tasks.yaml
src/: main.py
src/discord_layer/: bot.py  webhook_mgr.py
src/game_logic/: crew.py  flow.py  llm_config.py
