[project]
name = "agentic_social_profiling"
version = "0.1.0"
description = "agentic_social_profiling using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.6.1",
]

[project.scripts]
agentic_social_profiling = "agentic_social_profiling.main:run"
run_crew = "agentic_social_profiling.main:run"
train = "agentic_social_profiling.main:train"
replay = "agentic_social_profiling.main:replay"
test = "agentic_social_profiling.main:test"
run_with_trigger = "agentic_social_profiling.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
